--- a/src/app/components/profile-page/profile-page/profile-page.component.sass
+++ b/src/app/components/profile-page/profile-page/profile-page.component.sass
@@ -4,8 +4,6 @@
     width: 100%
     height: 15%
     align-items: center
-    position: sticky
-    top: 0
 
 .bb-profile-menu
     position: fixed
@@ -13,9 +11,17 @@
     right: 1rem
     top: 1rem
 
-.bb-profile-menu-item
-    font-size: 1.1rem
+.bb-btn-menu-opt
+    width: 7rem
+    height: 3rem
 
+.bb-profile-menu-item
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    width: 100%
+    height: 100%
 
 .bb-user-div
     margin-top: 10px
