--- a/src/app/components/profile-page/prof-description/edition-form/edition-form.component.html
+++ b/src/app/components/profile-page/prof-description/edition-form/edition-form.component.html
@@ -3,7 +3,7 @@
     <mat-form-field appearance="outline">
         <mat-icon matPrefix color="primary">person</mat-icon>
         <mat-label>Name</mat-label>
-        <input matInput placeholder="{{user.name}}" disabled value="nombre" color="primary">
+        <input matInput placeholder="{{user.name}}" disabled value="{{user.name}}" color="primary">
     </mat-form-field>
 
     <!--Username-->
