--- a/src/app/components/general/navbar/navbar.component.sass
+++ b/src/app/components/general/navbar/navbar.component.sass
@@ -1,21 +1,68 @@
-/*.bb-navbar
-  // TODO: Alinear para abajo del todo de la pantalla en todo momento.
-  // Asegurarse que no haga cosas raras con el contenido si es largo (capaz que queda por detras de la navbar)
-  width: 100%
-  position: fixed
-  bottom: 0 
-  z-index: 1000*/
-
-.bb-navbar .row
-  display: flex
-  align-items: center
-  justify-content: center
-
-.row .col
-  padding: 10%
-
-.bb-divider
-  border-top-color: black
+@use '../../../../styles'
 
 .bb-navbar
-  background-color: white
+  position: absolute
+  z-index: 10
+
+.bb-navbar-icon
+  font-size: 2rem
+  height: 100%
+  width: 100%
+
+@media (max-width: 700px)
+  .bb-navbar
+    background-color: white
+
+    height: 3.5rem
+
+    bottom: 0
+
+  .bb-navbar-link
+    text-align: center
+    align-self: center
+
+@media (min-width: 700px)
+  .bb-navbar
+    height: 3.5rem
+
+    top: 0
+
+    & .col
+      flex: 0 0 auto
+      align-items: center
+
+      width: 10rem
+
+      &:hover
+        background-color: styles.$bb-primary-green
+        color: white
+
+  .bb-navbar-link
+    color: styles.$bb-primary-green
+
+    &>.bb-navbar-icon
+        display: none
+        font-size: 0rem
+        width: 0%
+        height: 0%
+
+    &.bb-home-link
+      &::after
+        content: 'Home'
+
+    &.bb-profile-link
+      &::after
+        content: 'Profile'
+
+    &.bb-chat-link
+      &::after
+        content: 'Chat'
+
+    &::after
+      text-decoration: none
+      font-family: 'DM Sans'
+      font-size: 1.6rem
+
+    &.bb-active
+      background-color: styles.$bb-primary-green
+      color: white
