--- a/src/app/components/general/navbar/navbar.component.html
+++ b/src/app/components/general/navbar/navbar.component.html
@@ -8,7 +8,7 @@
           <mat-icon class="bb-navbar-icon" color="primary">map</mat-icon>
         </a>
 
-        <a class="bb-navbar-link bb-profile-link col d-flex justify-content-center {{homeChatSelector}}"
+        <a class="bb-navbar-link bb-chat-link col d-flex justify-content-center {{homeChatSelector}}"
             routerLink="/chat">
           <mat-icon class="bb-navbar-icon"
             [matBadge]="unreadedChats"
@@ -17,7 +17,7 @@
             color="primary">chat</mat-icon>
         </a>
 
-        <a class="bb-navbar-link bb-chat-link col d-flex justify-content-center {{homeProfileSelector}}"
+        <a class="bb-navbar-link bb-profile-link col d-flex justify-content-center {{homeProfileSelector}}"
             routerLink="/profile">
           <mat-icon class="bb-navbar-icon" color="primary">person</mat-icon>
         </a>
