--- a/src/app/components/chat-page/speech-bubble/speech-bubble.component.sass
+++ b/src/app/components/chat-page/speech-bubble/speech-bubble.component.sass
@@ -1,10 +1,10 @@
-.bb-user-speech
+.bb-outgoing-speech
     margin-left: 25%
 
-.bb-sender-speech
+.bb-incoming-speech
     width:75%
 
-.speech-bubble 
+.speech-bubble
     width: 75%
     margin: 50px auto
     border-radius: 15px
@@ -16,7 +16,7 @@
     color: whitesmoke
     position: relative
 
-.sender
+.incoming
     width: 75%
     margin: 50px auto
     border-radius: 15px
@@ -29,7 +29,7 @@
     color: black
     position: relative
 
-.user:before
+.outgoing:before
     content: ""
     width: 0px
     height: 0px
@@ -41,7 +41,7 @@
     right: -16px
     top: 0px
 
-.sender:before
+.incoming:before
     content: ""
     width: 0px
     height: 0px
