almost all of the chat page is working, only missing chat feed and input

--- a/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
+++ b/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="bb-chat-feed-header" color="primary">
+<mat-toolbar color="primary">
     <mat-toolbar-row class="bb-feed-header">
       <a routerLink="/chat" *ngIf="showIcons">
         <button mat-icon-button>
