--- a/src/app/components/chats-section/chat-preview/chat-preview.component.html
+++ b/src/app/components/chats-section/chat-preview/chat-preview.component.html
@@ -1,3 +1,6 @@
-<div class="bb-preview">
-    <ng-content></ng-content>
-</div>
+<button mat-button class="bb-preview">
+    <app-user-info
+      [description]="lastMessage?.content?.value"
+      [user]="chat.from!"
+    ></app-user-info>
+</button>
