--- a/src/app/components/chats-section/chat-preview/chat-preview.component.sass
+++ b/src/app/components/chats-section/chat-preview/chat-preview.component.sass
@@ -1,3 +1,10 @@
 .bb-preview
-    display: flex
-    width: 100%
+    display: block
+    margin: 0.6rem auto auto auto
+
+    min-width: fit-content
+    width: calc(100% - 1.6rem)
+    height: 4.3rem
+    border-radius: 5px
+
+    text-align: left
