--- a/src/app/components/chats-section/chats-list/chats-list.component.html
+++ b/src/app/components/chats-section/chats-list/chats-list.component.html
@@ -1,8 +1,8 @@
-<mat-nav-list>
-    <mat-list-item *ngFor="let chat of chats; last as last">
-        <a routerLink="/chat/{{chat.id}}">
-            <app-chat-preview [chat]="chat"></app-chat-preview>
-        </a>
-        <mat-divider *ngIf="!last"></mat-divider>
-    </mat-list-item>
-</mat-nav-list>
+<div class="bb-chat-list">
+  <div *ngFor="let chat of chats; last as last">
+    <a routerLink="/chat/{{chat.id}}">
+        <app-chat-preview [chat]="chat"></app-chat-preview>
+    </a>
+    <mat-divider *ngIf="!last"></mat-divider>
+  </div>
+</div>
