--- a/src/app/components/chats-section/chats-view/chats-view.component.html
+++ b/src/app/components/chats-section/chats-view/chats-view.component.html
@@ -1,5 +1,20 @@
-<app-chat-feed-header [title]="'Temporal chats'" [showIcons]="false"></app-chat-feed-header>
-    <app-chats-list [chats]="temporalChats"></app-chats-list>
-<app-chat-feed-header [title]="'Permanent chats'" [showIcons]="false"></app-chat-feed-header>
-    <app-chats-list [chats]="permanentChats"></app-chats-list>
 
+<app-navbar activePage="Chat"></app-navbar>
+
+<article class="bb-chat-page-article">
+  <app-chat-feed-header
+    *ngIf="temporalChats && temporalChats.length > 0"
+    [title]="'Temporal chats'"
+    [showIcons]="false">
+  </app-chat-feed-header>
+  <app-chats-list [chats]="temporalChats">
+  </app-chats-list>
+
+  <app-chat-feed-header
+    *ngIf="permanentChats && permanentChats.length > 0"
+    [title]="'Permanent chats'"
+    [showIcons]="false">
+  </app-chat-feed-header>
+  <app-chats-list [chats]="permanentChats">
+  </app-chats-list>
+</article>
