--- a/src/app/components/chats-section/chat-preview/chat-preview.component.html
+++ b/src/app/components/chats-section/chat-preview/chat-preview.component.html
@@ -1,6 +1,6 @@
 <button mat-button class="bb-preview">
     <app-user-info
       [description]="lastMessage?.content?.value"
-      [user]="chat.from!"
+      [user]="chat.to!"
     ></app-user-info>
 </button>
