finished chat feed and input, missing chat header

--- a/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
+++ b/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
@@ -1,17 +1,21 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row class="bb-feed-header">
+
       <a routerLink="/chat" *ngIf="showIcons">
         <button mat-icon-button>
-          <mat-icon>arrow_back</mat-icon>
+          <mat-icon class="bb-back-icon">arrow_back</mat-icon>
         </button>
       </a>
+
       <div>
         <span class="bb-title">{{title}}</span>
       </div>
-      <button mat-icon-button *ngIf="showIcons"  [matMenuTriggerFor]="menu" #matMenuTriggerFor>
+
+      <button mat-icon-button *ngIf="showIcons" [matMenuTriggerFor]="menu" #matMenuTriggerFor>
         <mat-icon>more_vert</mat-icon>
       </button>
-      <mat-menu #menu="matMenu" >
+
+      <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="openBlockDialog()">
           <mat-icon>block</mat-icon>
           <span>Block user</span>
