--- a/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.sass
+++ b/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.sass
@@ -1,5 +1,5 @@
-a
-    color: inherit
+.bb-back-icon
+    color: white
 
 .bb-feed-header
     display:flex
@@ -7,3 +7,6 @@ a
 
 .bb-title
     font-family: 'DM Sans'
+
+.bb-chat-menu
+    z-index: 9999
