--- a/src/app/components/chat-page/chat-feed-input/chat-feed-input.component.html
+++ b/src/app/components/chat-page/chat-feed-input/chat-feed-input.component.html
@@ -1,6 +1,10 @@
-<form class="bb-chat-feed-footer" (submit)="sendMessage(messageInput)">
-    <input #messageInput type="text" class="bb-chat-text-input" placeholder="Type something..." >
-    <button mat-button color="primary" type="submit">
-        <mat-icon>send</mat-icon>
-    </button>
+<form #inputForm class="bb-chat-feed-footer row gx-3" (submit)="$event.preventDefault();
+                                                                sendMessage(messageInput)">
+  <mat-form-field class="col bb-message-input"
+    appearance="outline"
+    color="primary">
+    <input #messageInput matInput placeholder="Enter a message here">
+  </mat-form-field>
+
+  <mat-icon class="col-auto bb-send-icon" color="primary" (click)="sendMessage(messageInput)">send</mat-icon>
 </form>
