--- a/src/app/components/chat-page/chat-feed-input/chat-feed-input.component.sass
+++ b/src/app/components/chat-page/chat-feed-input/chat-feed-input.component.sass
@@ -1,16 +1,19 @@
 .bb-chat-feed-footer
-    background: white
-    display: flex
-    align-content: center
-    width: 100%
-    position: sticky
-    bottom:0
+  background: white
 
-.bb-chat-text-input
-    width:80%
-    border: solid 2px
-    border-radius: 10px
+  width: 100%
 
-button
-    width: 15% 
-    height: 100%
+  position: sticky
+  bottom: 0
+
+  align-items: center
+
+.bb-send-icon
+  width: fit-content
+  height: fit-content
+
+  font-size: 2rem
+
+.bb-message-input
+  height: 4rem
+  margin-left: 0.5rem
