--- a/src/app/components/chat-page/chat-feed/chat-feed.component.html
+++ b/src/app/components/chat-page/chat-feed/chat-feed.component.html
@@ -1,3 +1,1 @@
-<div *ngFor="let message of messages">
-    <app-speech-bubble [message]="message"></app-speech-bubble>
-</div>
+<app-speech-bubble *ngFor="let message of messages" [message]="message"></app-speech-bubble>
