--- a/src/app/components/chat-page/chat-view/chat-view.component.html
+++ b/src/app/components/chat-page/chat-view/chat-view.component.html
@@ -1,13 +1,18 @@
-<div>
+<div *ngIf="chat">
     <div class="app-chat-feed-header">
-        <app-chat-feed-header *ngIf="chat" [title]="chat.to!.name!"></app-chat-feed-header>
+        <app-chat-feed-header [title]="chat.to!.name!"></app-chat-feed-header>
     </div>
 
-    <section>
-        <app-chat-feed></app-chat-feed>
+    <section #chatSection class="overflow-auto bb-chat-section">
+        <app-chat-feed [messages]="chat.chatMessages || []">
+      </app-chat-feed>
     </section>
 
+
+
     <div class="app-chat-feed-input">
-        <app-chat-feed-input></app-chat-feed-input>
+        <app-chat-feed-input [chat]="chat"
+            (messageSent)="isScrollToBottom = true">
+        </app-chat-feed-input>
     </div>
 </div>
