--- a/src/app/components/chat-page/chat-view/chat-view.component.sass
+++ b/src/app/components/chat-page/chat-view/chat-view.component.sass
@@ -6,8 +6,9 @@
 .app-chat-feed-input
     width: 100%
     position: fixed
-    bottom: 0 
+    bottom: 0
     z-index: 1000
 
-section
+.bb-chat-section
     position: relative
+    height: calc(100vh - 7rem)
