--- a/src/app/components/chat-page/speech-bubble/speech-bubble.component.html
+++ b/src/app/components/chat-page/speech-bubble/speech-bubble.component.html
@@ -1,5 +1,5 @@
 <div class="bb-{{speechBubbleType}}-speech">
     <div class="speech-bubble {{speechBubbleType}}">
-        {{message.content.value}}
+        <span>{{message.content.value}}</span>
     </div>
 </div>
