--- a/src/app/components/chat-page/speech-bubble/speech-bubble.component.sass
+++ b/src/app/components/chat-page/speech-bubble/speech-bubble.component.sass
@@ -1,54 +1,61 @@
+$outgoing-background: #488817
+$incoming-background: #E8E8E8
+
 .bb-outgoing-speech
-    margin-left: 25%
+    margin-left: 15%
 
 .bb-incoming-speech
-    width:75%
+   margin-right: 15%
 
 .speech-bubble
-    width: 75%
-    margin: 50px auto
+    position: relative
+
+    padding: 1rem
+    margin-top: 1.3rem
+    margin-bottom: 1.3rem
+
+    max-width: 85%
+    width: fit-content
+
     border-radius: 15px
-    background: #4d9f0f
-    padding: 20px
+    background: $outgoing-background
+
     font-family: 'DM Sans'
-    font-weight: 700
+    font-weight: 500
     text-decoration: none
     color: whitesmoke
-    position: relative
 
-.incoming
-    width: 75%
-    margin: 50px auto
-    border-radius: 15px
-    background: #E8E8E8
-    color: black
-    padding: 20px
-    font-family: 'DM Sans'
-    font-weight: 700
-    text-decoration: none
-    color: black
-    position: relative
+    &.outgoing
+        margin-right: 3rem
+        margin-left: auto
 
-.outgoing:before
-    content: ""
-    width: 0px
-    height: 0px
-    position: absolute
-    border-left: 15px solid #4d9f0f
-    border-right: 15px solid transparent
-    border-top: 15px solid #4d9f0f
-    border-bottom: 15px solid transparent
-    right: -16px
-    top: 0px
+        &:before
+            content: ""
+            width: 0px
+            height: 0px
+            position: absolute
+            border-left: 15px solid $outgoing-background
+            border-right: 15px solid transparent
+            border-top: 15px solid $outgoing-background
+            border-bottom: 15px solid transparent
+            right: -16px
+            top: 0px
 
-.incoming:before
-    content: ""
-    width: 0px
-    height: 0px
-    position: absolute
-    border-left: 15px solid transparent
-    border-right: 15px solid #E8E8E8
-    border-top: 15px solid #E8E8E8
-    border-bottom: 15px solid transparent
-    left: -16px
-    top: 0px
+    &.incoming
+        margin-left: 3rem
+        margin-right: auto
+
+        background: $incoming-background
+        color: black
+
+        &:before
+            content: ""
+            width: 0px
+            height: 0px
+            position: absolute
+            border-left: 15px solid transparent
+            border-right: 15px solid $incoming-background
+            border-top: 15px solid $incoming-background
+            border-bottom: 15px solid transparent
+            left: -16px
+            top: 0px
