--- a/src/app/components/general/navbar/navbar.component.sass
+++ b/src/app/components/general/navbar/navbar.component.sass
@@ -9,6 +9,11 @@
   height: 100%
   width: 100%
 
+  color: #646464
+
+  &.bb-active
+    color: styles.$bb-primary-green !important
+
 @media (max-width: 700px)
   .bb-navbar
     background-color: white
