--- a/src/app/components/chat-page/chat-view/chat-view.component.html
+++ b/src/app/components/chat-page/chat-view/chat-view.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="chat">
     <div class="app-chat-feed-header">
-        <app-chat-feed-header [title]="chat.to!.name!"></app-chat-feed-header>
+        <app-chat-feed-header [chat]="chat"></app-chat-feed-header>
     </div>
 
     <section #chatSection class="overflow-auto bb-chat-section">
