--- a/src/app/components/chat-page/block-dialog/block-dialog.component.html
+++ b/src/app/components/chat-page/block-dialog/block-dialog.component.html
@@ -1,5 +1,5 @@
 <app-base-dialog [dialogTitle]="'Block user?'">
-    <span bb-content>Are you sure you want to block --user--</span>
-    <button bb-actions mat-button mat-dialog-close>Close</button>
-    <button bb-actions mat-button mat-dialog-close (click)="blockUser()">Yes</button>
+    <span bb-content>Are you sure you want to block {{data.userName || 'this user'}}?</span>
+    <button bb-actions mat-raised-button mat-dialog-close>Cancel</button>
+    <button bb-actions mat-raised-button color="primary" (click)="blockUser()">Yes</button>
 </app-base-dialog>
