--- a/src/app/components/chat-page/delete-dialog/delete-dialog.component.html
+++ b/src/app/components/chat-page/delete-dialog/delete-dialog.component.html
@@ -1,6 +1,6 @@
 <app-base-dialog [dialogTitle]="'Delete chat?'">
-    <span bb-content>Are you sure you want to delete the chat</span>
-    <button bb-actions mat-button mat-dialog-close>Close</button>
-    <button bb-actions mat-button mat-dialog-close (click)="deleteChat()">Yes</button>
+    <span bb-content>Are you sure you want to delete this chat?</span>
+    <button bb-actions mat-raised-button mat-dialog-close>Cancel</button>
+    <button bb-actions mat-raised-button color="primary" (click)="deleteChat()">Yes</button>
 </app-base-dialog>
 
