small improvement to profile page edit mode

--- a/src/app/components/profile-page/profile-page/profile-page.component.sass
+++ b/src/app/components/profile-page/profile-page/profile-page.component.sass
@@ -25,10 +25,15 @@
 
 .bb-user-photo
     margin-top: 10px
+
     width: 100px
     height: 100px
     display: flex
+
     position: relative
+
+    &.bb-edit-mode
+        cursor: pointer
 
 .bb-user-pfp-edit
     position: absolute
