--- a/src/app/components/profile-page/profile-page/profile-page.component.html
+++ b/src/app/components/profile-page/profile-page/profile-page.component.html
@@ -14,7 +14,7 @@
             <app-user-icon [iconUrl]="user.iconUrl"></app-user-icon>
     </div>
 
-    <div class="bb-user-photo" *ngIf="editionModeOn" (click)="pfpInput.click()">
+    <div class="bb-user-photo bb-edit-mode" *ngIf="editionModeOn" (click)="pfpInput.click()">
         <app-user-icon [iconUrl]="user.iconUrl"></app-user-icon>
         <mat-icon  class="bb-user-pfp-edit">add_photo_alternate</mat-icon>
     </div>
