--- a/src/app/components/profile-page/profile-page/profile-page.component.html
+++ b/src/app/components/profile-page/profile-page/profile-page.component.html
@@ -1,3 +1,4 @@
+<app-navbar [activePage]="'Profile'"></app-navbar>
 <div class="bb-user-info">
 
     <button mat-icon-button [matMenuTriggerFor]="menu" class="bb-profile-menu" *ngIf="!editionModeOn">
